--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /dist
 /node_modules
 /build
+hexa.txt
+hexagonal.txt
 
 # Logs
 logs
@@ -36,10 +38,10 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
-.env.development.local
+.env.example
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 .env.local
 
 # temp directory
