--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@nestjs/common": "^11.0.7",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.7",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.7",
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv-cli": "^8.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -42,6 +44,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^22.13.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
