--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.7",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.0.8",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.7",
     "@prisma/client": "^6.3.0",
@@ -33,6 +34,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv-cli": "^8.0.0",
+    "nats": "^2.29.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
